--- a/index.html
+++ b/index.html
@@ -178,62 +178,52 @@
         <div class="uk-heading-line uk-text-left uk-container">
             <h2 class="t-g-claro asap-b">Proyectos</h2>
         </div>
-        <div>
+        <div class="uk-margin-medium-top">
             <div class="uk-child-width-1-3@s uk-grid-collapse uk-text-center" uk-grid>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
+                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Lyft</b></h3>
                         <img src="assets/imgs/proyectos/lyft.png" alt="lyft">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h2><b>Lyft</b></h2>
                             <p class="">Maquetación de landing page con flexbox.</p>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/lyft/index.html" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/lyft" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/lyft/index.html" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/lyft" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
+                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Labcar</b></h3>
                         <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h2><b>Labcar</b></h2>
-                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Responsive.</p>
+                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/labcar/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/labcar" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/labcar/" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/labcar" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <img src="assets/imgs/proyectos/applove.png" alt="applove">
+                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
+                        <img src="assets/imgs/proyectos/experimenta.png" alt="experimenta">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h2><b>Applove</b></h2>
-                            <p class="">Maquetación de landing page con uso de grid.</p>
+                            <p class="">Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/applove2/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/applove2" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/LabExp-Clientes" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!--<div class="uk-text-center">
-                    <div class="uk-inline-clip uk-transition-toggle">
-                        <img src="assets/imgs/proyectos/freelancer.png" alt="freelancer">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="https://dianix.github.io/applove2/" class="t-verde uk-text-large bold uk-margin-remove">Freelancer</a>
-                            <p class=" uk-margin-remove">Maquetación con uso de Bootstrap.</p>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
+                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Twitter</b></h3>
                         <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h2><b>Twitter</b></h2>
                             <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes con jQuery y estilos con materialize.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/twitter/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
@@ -244,9 +234,9 @@
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
+                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h2><b>Antojitos.mx</b></h2>
                             <p class=" uk-margin-remove">Uso de API google maps y estilos con Materialize.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
@@ -255,20 +245,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="uk-text-center">
-                    <div class="uk-inline-clip uk-transition-toggle">
-                        <img src="assets/imgs/proyectos/foro.png" alt="foro">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Foro dinámico</a>
-                            <p class=" uk-margin-remove">Maquetación con bootstrap y uso de AJAX para llamar API.</p>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
+                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Pokedex</b></h3>
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h2><b>Pokedex</b></h2>
                             <p class=" uk-margin-remove">AJAX para consumo de API y estilos con materialize.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/pokedex/public/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
