--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
                         <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
                         <img src="assets/imgs/proyectos/experimenta.png" alt="experimenta">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p class="">Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
-                            <div>
+                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
+                            <h6 class="uk-margin-remove uk-text-meta">Login: patitoadm@gmail.com / contra1X</h6>
+                            <div  class="uk-margin-small-top">
                                 <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/LabExp-Clientes" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
@@ -226,8 +227,8 @@
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes con jQuery y estilos con materialize.</p>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/twitter/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/twitter" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/twitter/" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/twitter" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
