--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
                     <li>
-                        <a href="#home" uk-icon="icon: home" uk-scroll> <span class="uk-visible@m">Home</span> &nbsp;</a>
+                        <a href="#home" uk-icon="icon: home" uk-scroll> <span class="uk-visible@m">Inicio</span> &nbsp;</a>
                     </li>
                     <li>
-                        <a href="#conocimientos" uk-icon="icon: cog" uk-scroll> <span class="uk-visible@m">Conocimientos</span>&nbsp;</a>
+                        <a href="#conocimientos" uk-icon="icon: settings" uk-scroll> <span class="uk-visible@m">Conocimientos</span>&nbsp;</a>
                     </li>
                     <li>
                         <a href="#proyectos" uk-icon="icon: album" uk-scroll> <span class="uk-visible@m">Proyectos</span>&nbsp;</a>
@@ -45,11 +45,11 @@
         </div>
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
-            <div id="yop" class="uk-text-center uk-box-shadow-bottom animated bounce">
+            <div id="yop" class="uk-text-center animated pulse">
                 <div class="uk-inline-clip uk-transition-toggle">
                     <a><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
                     <div class="uk-transition-fade uk-position-cover uk-position-xlarge uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle uk-border-circle">
-                        <p> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc. <br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. <br> Gusto por la ingeniería en papel, caligrafía y lettering.</p>
+                        <p> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer<br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. Con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc.<br> Gusto por la caligrafía, lettering, encuadernación e ingeniería en papel.</p>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
     </main>
 
     <section id="conocimientos" class="g-azul" uk-scrollspy="target: > div; cls:uk-animation-slide-left-medium; delay: 600">
-        <div class="uk-heading-line uk-text-left uk-container">
+        <div class="uk-heading-line uk-text-center uk-container">
             <h2 class="bold t-g-claro uk-text-center asap-b">Conocimientos</h2>
         </div>
         <div id="herramientas" class="uk-grid uk-child-width-1-1@s uk-grid-collapse">
@@ -174,18 +174,19 @@
         </div>
     </section>
 
-    <section id="proyectos" class="g-oscuro">
-        <div class="uk-heading-line uk-text-left uk-container">
+    <section id="proyectos" class="g-medio">
+        <div class="uk-heading-line uk-text-center uk-container">
             <h2 class="t-g-claro asap-b">Proyectos</h2>
         </div>
         <div class="uk-margin-medium-top">
             <div class="uk-child-width-1-3@s uk-grid-collapse uk-text-center" uk-grid>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Lyft</b></h3>
+
                         <img src="assets/imgs/proyectos/lyft.png" alt="lyft">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p class="">Maquetación de landing page con flexbox.</p>
+                            <h3 class=" uk-margin-small uk-margin-remove"><b>Lyft</b></h3>
+                            <p class="">Maquetación de landing page con flexbox.</p><br><br><br><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/lyft/index.html" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/lyft" uk-icon="icon: github-alt; ratio:2"></a>
@@ -195,10 +196,10 @@
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Labcar</b></h3>
                         <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p>
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Labcar</b></h3>
+                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p><br><br><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/labcar/" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/labcar" uk-icon="icon: github-alt; ratio:2"></a>
@@ -208,12 +209,12 @@
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
                         <img src="assets/imgs/proyectos/experimenta.png" alt="experimenta">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
+                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p><br>
                             <h6 class="uk-margin-remove uk-text-meta">Login: patitoadm@gmail.com / contra1X</h6>
-                            <div  class="uk-margin-small-top">
+                            <div class="uk-margin-small-top">
                                 <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/LabExp-Clientes" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
@@ -222,10 +223,10 @@
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Twitter</b></h3>
                         <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes con jQuery y estilos con materialize.</p>
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Twitter</b></h3>
+                            <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes. Uso de jQuery y estilos con materialize.</p><br><br><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/twitter/" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/twitter" uk-icon="icon: github-alt; ratio:2"></a>
@@ -235,10 +236,10 @@
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p class=" uk-margin-remove">Uso de API google maps y estilos con Materialize.</p>
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
+                            <p>Aplicación para mostrar ubicación de restaurantes. <br>Uso de API google maps y estilos con Materialize.</p><br><br><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/antojitos.mx" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
@@ -248,10 +249,10 @@
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Pokedex</b></h3>
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <p class=" uk-margin-remove">AJAX para consumo de API y estilos con materialize.</p>
+                            <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Pokedex</b></h3>
+                            <p>Página que accede a datos del pokemon dando click en su nombre. Uso de AJAX para consumo de API y estilos con materialize.</p> <br><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/pokedex/public/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
                                 <a target="_blank" href="https://github.com/dianix/pokedex" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
@@ -272,13 +273,9 @@
                 <p class="t-g-claro">D.C.G. Diana B. Vázquez Camacho</p>
             </div>
             <div>
-                <a class="uk-margin-small" title="55 6191 9111" uk-tooltip="pos:center">
-                    <a href="tel://5561919111" class="t-g-claro" uk-icon="icon: phone; ratio: 1.7"></a>
-                </a>
-                <a class="uk-margin-small" title="anaid.xd@gmail.com" uk-tooltip="pos:top">
-                    <a href="mailto:anaid.xd@gmail.com" class="t-g-claro" uk-icon="icon: mail; ratio: 1.7"></a>
-                </a>
-                <a target="_blank" href="https://linkedin.com/in/dianix-v" class="t-g-claro uk-margin-small" uk-icon="icon: linkedin; ratio:1.7"></a>
+                <a class="uk-margin-small" title="55 6191 9111" uk-tooltip="pos:top" href="tel://5561919111" class="t-g-claro" uk-icon="icon: phone; ratio: 1.7"></a>&nbsp;
+                <a class="uk-margin-small" title="anaid.xd@gmail.com" uk-tooltip="pos:top" href="mailto:anaid.xd@gmail.com" class="t-g-claro" uk-icon="icon: mail; ratio: 1.7"></a>&nbsp;
+                <a target="_blank" href="https://linkedin.com/in/dianix-v" class="t-g-claro uk-margin-small" uk-icon="icon: linkedin; ratio:1.7"></a>&nbsp;
                 <a target="_blank" href="https://github.com/dianix" class="t-g-claro uk-margin-medium" uk-icon="icon: github; ratio: 1.7"></a>
             </div>
         </div>
