--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="uk-heading-line uk-text-center uk-container">
             <h2 class="t-g-claro asap-b">Contáctame</h2>
         </div>
-        <div class="uk-grid uk-child-width-1-1@s uk-text-center">
+        <div class="uk-grid uk-child-width-1-1@s uk-text-center" uk-scrollspy="cls: uk-animation-scale-down; repeat: true">
             <div class="uk-text-small mi-nombre uk-text-center">
                 <p class="t-g-claro">D.C.G. Diana B. Vázquez Camacho</p>
             </div>
