--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="#conocimientos" uk-icon="icon: settings" uk-scroll> <span class="uk-visible@m">Conocimientos</span>&nbsp;</a>
                     </li>
                     <li>
-                        <a href="#proyectos" uk-icon="icon: album" uk-scroll> <span class="uk-visible@m">Proyectos</span>&nbsp;</a>
+                        <a href="#proyectos" uk-icon="icon: desktop" uk-scroll> <span class="uk-visible@m">Desarrollo web</span>&nbsp;</a>
                     </li>
                     <li>
                         <a href="#contacto" uk-icon="icon: mail" uk-scroll> <span class="uk-visible@m">Contacto</span>&nbsp;</a>
@@ -56,13 +56,13 @@
         </div>
     </main>
 
-    <section id="conocimientos" class="g-azul" uk-scrollspy="target: > div; cls:uk-animation-slide-left-medium; delay: 600">
+    <section id="conocimientos" class="g-azul" uk-scrollspy="target: > div; cls:uk-animation-slide-left-medium; delay: 500">
         <div class="uk-heading-line uk-text-center uk-container">
             <h2 class="bold t-g-claro uk-text-center asap-b">Conocimientos</h2>
         </div>
         <div id="herramientas" class="uk-grid uk-child-width-1-1@s uk-grid-collapse">
             <h4 class="t-verde julius uk-text-center@s uk-text-left@m">Herramientas de desarrollo web</h4>
-            <div class="web uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 500; repeat: true">
+            <div class="web uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/html5.svg" alt="HTML5">
@@ -108,7 +108,7 @@
             </div>
 
             <h5 class="t-verde julius uk-heading-line">Frameworks CSS</h5>
-            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 500; repeat: true">
+            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/bt.svg" alt="Bootstrap">
@@ -133,7 +133,7 @@
             </div>
 
             <h4 class="t-verde julius">Herramientas de diseño</h4>
-            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 500; repeat: true">
+            <div class="uk-child-width-1-3@s uk-child-width-1-6@m uk-text-center" uk-grid uk-grid uk-scrollspy="cls: uk-animation-fade; target: .icono-xs; delay: 200; repeat: true">
                 <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
@@ -176,7 +176,7 @@
 
     <section id="proyectos" class="g-medio">
         <div class="uk-heading-line uk-text-center uk-container">
-            <h2 class="t-g-claro asap-b">Proyectos</h2>
+            <h2 class="t-g-claro asap-b">Desarrollo web</h2>
         </div>
         <div  class="uk-margin-medium-top">
             <div class="uk-child-width-1-3@s uk-grid-collapse uk-text-center" uk-grid uk-scrollspy="cls: uk-animation-scale-up; target: .proyec; delay: 500; repeat: true">
@@ -187,7 +187,7 @@
                             <h3 class=" uk-margin-small uk-margin-remove"><b>Lyft</b></h3>
                             <p class="">Maquetación de landing page con flexbox.</p><br><br><br><br>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/lyft/index.html" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/lyft/index.html" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/lyft" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Labcar</b></h3>
                             <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p><br><br><br>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/labcar/" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/labcar/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/labcar" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
@@ -214,7 +214,7 @@
                             <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p><br>
                             <h6 class="uk-margin-remove uk-text-meta">Login: patitoadm@gmail.com / contra1X</h6>
                             <div class="uk-margin-small-top">
-                                <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/LabExp-Clientes" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Twitter</b></h3>
                             <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes. Uso de jQuery y estilos con materialize.</p><br><br><br>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/twitter/" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/twitter/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/twitter" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
                             <p>Aplicación para mostrar ubicación de restaurantes. <br>Uso de API google maps y estilos con Materialize.</p><br><br><br>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/antojitos.mx" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
@@ -253,7 +253,7 @@
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Pokedex</b></h3>
                             <p>Página que accede a datos del pokemon dando click en su nombre. Uso de AJAX para consumo de API y estilos con materialize.</p> <br><br>
                             <div>
-                                <a target="_blank" href="https://dianix.github.io/pokedex/public/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://dianix.github.io/pokedex/public/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/pokedex" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
