--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <img src="assets/imgs/proyectos/lyft.png" alt="lyft">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class=" uk-margin-small uk-margin-remove"><b>Lyft</b></h3>
-                            <p class="">Maquetación de landing page con flexbox.</p><br><br><br><br>
+                            <p class="">Maquetación de landing page con flexbox.</p><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/lyft/index.html" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/lyft" uk-icon="icon: github-alt; ratio:2"></a>
@@ -198,7 +198,7 @@
                         <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Labcar</b></h3>
-                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p><br><br><br>
+                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Diseño responsive.</p><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/labcar/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/labcar" uk-icon="icon: github-alt; ratio:2"></a>
@@ -211,7 +211,7 @@
                         <img src="assets/imgs/proyectos/experimenta.png" alt="experimenta">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Experimenta-Canal de Ventas</b></h3>
-                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p><br>
+                            <p>Proyecto colaborativo de maquetación de micro sitio para empresa Experimenta. <br> <b>Diseño ganador en hackaton Lab-Exp, julio de 2017.</b></p>
                             <h6 class="uk-margin-remove uk-text-meta">Login: patitoadm@gmail.com / contra1X</h6>
                             <div class="uk-margin-small-top">
                                 <a target="_blank" href="https://dianix.github.io/LabExp-Clientes/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
@@ -225,7 +225,7 @@
                         <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Twitter</b></h3>
-                            <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes. Uso de jQuery y estilos con materialize.</p><br><br><br>
+                            <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes. Uso de jQuery y estilos con materialize.</p><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/twitter/" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/twitter" uk-icon="icon: github-alt; ratio:2"></a>
@@ -238,7 +238,7 @@
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Antojitos.mx</b></h3>
-                            <p>Aplicación para mostrar ubicación de restaurantes. <br>Uso de API google maps y estilos con Materialize.</p><br><br><br>
+                            <p>Aplicación para mostrar ubicación de restaurantes. <br>Uso de API google maps y estilos con Materialize.</p><br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/antojitos.mx" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
@@ -251,7 +251,7 @@
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
                             <h3 class="t-verde uk-margin-small uk-margin-remove"><b>Pokedex</b></h3>
-                            <p>Página que accede a datos del pokemon dando click en su nombre. Uso de AJAX para consumo de API y estilos con materialize.</p> <br><br>
+                            <p>Página que accede a datos del pokemon dando click en su nombre. Uso de AJAX para consumo de API y estilos con materialize.</p> <br>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/pokedex/public/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>&nbsp; &nbsp; &nbsp;
                                 <a target="_blank" href="https://github.com/dianix/pokedex" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
